--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,23 +6,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    continue-on-error: true
+
+    outputs:
+      success: ${{ steps.build.outcome == 'success' }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Set up JDK 21 (Amazon Corretto)
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v2
         with:
           distribution: 'corretto'
           java-version: '21'
 
       - name: Cache Maven dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v2
         with:
-          path: ~/.m2/repository
+          path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
       - name: Build with Maven
+        id: build
         run: mvn clean install
