--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,47 +6,35 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    continue-on-error: true
+
+    outputs:
+      success: ${{ steps.parse_checkstyle.outcome == 'success' }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Set up JDK 21 (Amazon Corretto)
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v2
         with:
           distribution: 'corretto'
           java-version: '21'
 
       - name: Install Checkstyle
         run: |
-          curl -LJO https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.12.0/checkstyle-10.12.0-all.jar
+          curl -LJO "https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.12.0/checkstyle-10.12.0-all.jar"
           mv checkstyle-10.12.0-all.jar /usr/local/bin/checkstyle.jar
 
       - name: Run Checkstyle
         run: |
-          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1 || true
-
-      - name: Upload Checkstyle Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: checkstyle-report
-          path: checkstyle-result.txt
+          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt
 
       - name: Parse Checkstyle output for warnings and errors
         id: parse_checkstyle
         run: |
-          errors=$(grep -o -E "error" checkstyle-result.txt | wc -l)
-          warnings=$(grep -o -E "warning|WARN" checkstyle-result.txt | wc -l)
-          echo "Warnings: $warnings"
+          errors=$(grep -c "error" checkstyle-result.txt)
           echo "Errors: $errors"
-          echo "errors=$errors" >> $GITHUB_ENV
-
-      - name: Fail if too many warnings or any errors
-        run: |
-          if [ ${{ env.errors }} -gt 0 ]; then
-            echo "Too many warnings or errors found. Failing the job."
+          if [ "$errors" -gt 0 ]; then
             exit 1
           fi
 
