--- a/.github/workflows/compendium.yml
+++ b/.github/workflows/compendium.yml
@@ -12,9 +12,11 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
   build:
+    needs: lint
     uses: ./.github/workflows/build.yml
 
   test:
+    needs: build
     uses: ./.github/workflows/test.yml
 
   deploy:
