--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -9,9 +9,10 @@ jobs:
 
     steps:
       - name: Checkout code with full history
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Configure Git User
         run: |
@@ -19,18 +20,26 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Find Last Successful Commit
+        id: find_last_good_commit
         run: |
+          # Retrieve the last successful commit based on deployment tags
           last_good_commit=$(git rev-list --tags='deployed_*' --max-count=1)
-          if [ -z "$last_good_commit" ]; then
+          if [[ -z "$last_good_commit" ]]; then
             echo "No previous successful deployment found."
             exit 1
           fi
+          echo "Last good commit: $last_good_commit"
+          echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
 
-      - name: Revert to Last Successful Commit (excluding workflow files)
+      - name: Revert to Last Successful Commit
         run: |
+          # Reset hard to the last successful commit
           git reset --hard ${{ env.last_good_commit }}
-          git reset --soft HEAD@{1}  # Keep the reset commit but make changes unstaged
-          git restore --staged .github/workflows/  # Exclude workflow files from the commit
-          git commit -m "Revert to last successful commit without changing workflows"
-          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
-          git push --force
+          # Clean up any untracked files and directories
+          git clean -fdx
+
+      - name: Push Reverted Changes
+        run: |
+          git push origin HEAD:$(echo $GITHUB_REF | sed 's/refs\/heads\///') --force
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
