--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -18,30 +18,56 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Find Last Successful Commit
+      - name: Determine Branch Name
+        id: get_branch
         run: |
-          last_good_commit=$(git rev-list --tags='deployed_*' --max-count=1)
-          if [[ -z "$last_good_commit" ]]; then
-            echo "No previous successful deployment found."
+          branch_name=$(echo "${GITHUB_REF#refs/heads/}")
+          echo "::set-output name=branch_name::$branch_name"
+
+      - name: Find Last Successful Commit Tag for Current Branch
+        id: find_last_good_commit
+        run: |
+          branch_name=${{ steps.get_branch.outputs.branch_name }}
+          last_good_tag=$(git tag --list "deployed_${branch_name}_*" --sort=-creatordate | head -n 1)
+          if [[ -z "$last_good_tag" ]]; then
+            echo "No previous successful deployment found for branch $branch_name."
             exit 1
           fi
-          echo "Last good commit: $last_good_commit"
-          echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
+          echo "Last good tag for branch $branch_name: $last_good_tag"
+          echo "last_good_tag=$last_good_tag" >> $GITHUB_ENV
 
       - name: Revert to Last Successful Commit
         run: |
-          git reset --hard ${{ env.last_good_commit }}
-          git restore --source=${{ env.last_good_commit }} --staged .github/workflows/  # Exclude workflow files correctly
-          git reset -- .github/workflows/  # Ensure workflow files are not included
+          git fetch --tags
+          git reset --hard ${{ env.last_good_tag }}
+          git clean -fdx  # Clean up any untracked files and directories
+          # Exclude workflow files from being reset
+          git restore --staged .github/workflows/
+          git reset -- .github/workflows/
 
-      - name: Commit if Necessary
+      - name: Reconfigure Remote with PAT
         run: |
-          if [[ `git status --porcelain` ]]; then
-            git commit -m "Revert to last successful commit due to failure in current build."
-          fi
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
 
-      - name: Push Reverted Changes
+      - name: Check for Changes to Commit
+        id: check_changes
         run: |
-          git push origin HEAD:$(echo $GITHUB_REF | sed 's/refs\/heads\///') --force
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          if git diff --quiet; then
+            echo "No changes to commit."
+            echo "skip_commit=true" >> $GITHUB_ENV
+          else
+            echo "Changes detected."
+            echo "skip_commit=false" >> $GITHUB_ENV
+
+      - name: Commit and Push Reversion (if changes)
+        if: env.skip_commit == 'false'
+        run: |
+          git commit -m "Reverted to last successful commit without changing workflows"
+          git push origin HEAD:${{ steps.get_branch.outputs.branch_name }} --force 
+          
+
+      - name: Force Push Reset (No Changes Detected)
+        if: env.skip_commit == 'true'
+        run: |
+          echo "No changes were detected, repository state is already at the last successful state."
+          git push origin HEAD:${{ steps.get_branch.outputs.branch_name }} --force
