--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,17 @@ name: Build
 
 on:
   workflow_call:
+    outputs:
+      success:
+        description: 'Whether the build job succeeded.'
+        value: ${{ jobs.build.outputs.success }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    continue-on-error: true
 
     outputs:
-      success: ${{ steps.build.outcome == 'success' }}
+      success: ${{ job.status == 'success' }}
 
     steps:
       - name: Checkout code
