--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,15 @@ name: Deploy
 
 on:
   workflow_call:
+    inputs:
+      ref_name:
+        type: string
+        required: true
+        description: 'The branch name'
+      sha:
+        type: string
+        required: true
+        description: 'The commit SHA'
 
 jobs:
   deploy:
@@ -15,7 +24,8 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git tag -a "deployed_{{ github.ref_name }}_{{ github.sha }}" -m "Deployment tag for {{ github.sha }}"
-          git push origin "deployed_{{ github.ref_name }}_{{ github.sha }}"
+          git tag -a "deployed_${{ inputs.ref_name }}_${{ inputs.sha }}" -m "Deployment tag for ${{ inputs.sha }}"
+          git push origin "deployed_${{ inputs.ref_name }}_${{ inputs.sha }}"
+
 
 
