ci/cd: Added publish stage to workflow

--- a/.github/workflows/compendium.yml
+++ b/.github/workflows/compendium.yml
@@ -27,6 +27,14 @@ jobs:
       ref_name: ${{ github.ref_name }}
       sha: ${{ github.sha }}
 
+  publish:
+    needs: deploy
+    if: ${{ needs.deploy.result == 'success' }}
+    uses: ./.github/workflows/publish.yml
+    with:
+      ref_name: ${{ github.ref_name }}
+      sha: ${{ github.sha }}
+
   rollback:
     needs: [lint, build, test]
     if: ${{ !needs.lint.outputs.success || !needs.build.outputs.success || !needs.test.outputs.success }}
