ci/cd(): Added support for MR aswell.

--- a/.github/workflows/compendium.yml
+++ b/.github/workflows/compendium.yml
@@ -6,6 +6,11 @@ on:
       - 'development'
       - 'quality'
       - 'production'
+  pull_request:
+    branches:
+      - 'development'
+      - 'quality'
+      - 'production'
 
 jobs:
   lint:
