--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,16 +31,19 @@ jobs:
 
       - name: Run Checkstyle and save output
         run: |
-          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1 || true
+          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1
         continue-on-error: true
 
-      - name: Parse Checkstyle output for warnings and errors
+      - name: Display Checkstyle Errors
+        run: |
+          echo "### Checkstyle Errors:"
+          grep '^\[ERROR\]' checkstyle-result.txt || echo "No errors found."
+
+      - name: Count Checkstyle Errors
         id: parse_checkstyle
         run: |
-          errors=$(grep -o -E "error" checkstyle-result.txt | wc -l)
-          warnings=$(grep -o -E "warning|WARN" checkstyle-result.txt | wc -l)
-          echo "Warnings: $warnings"
-          echo "Errors: $errors"
+          errors=$(grep -c '^\[ERROR\]' checkstyle-result.txt)
+          echo "Total Errors: $errors"
           echo "errors=$errors" >> $GITHUB_ENV
 
       - name: Fail if any errors
