--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Checkstyle and save output
         run: |
-          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1
+          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1 || true
         continue-on-error: true
 
       - name: Display Checkstyle Errors
@@ -42,8 +42,10 @@ jobs:
       - name: Count Checkstyle Errors
         id: parse_checkstyle
         run: |
-          errors=$(grep -c '^\[ERROR\]' checkstyle-result.txt)
-          echo "Total Errors: $errors"
+          errors=$(grep -o -E "error" checkstyle-result.txt | wc -l)
+          warnings=$(grep -o -E "warning|WARN" checkstyle-result.txt | wc -l)
+          echo "Warnings: $warnings"
+          echo "Errors: $errors"
           echo "errors=$errors" >> $GITHUB_ENV
 
       - name: Fail if any errors
@@ -52,3 +54,4 @@ jobs:
             echo "Errors found. Failing the job."
             exit 1
           fi
+
