--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,22 +31,23 @@ jobs:
 
       - name: Run Checkstyle and save output
         run: |
-          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1 || true
+          java -jar /usr/local/bin/checkstyle.jar -c google src/ > checkstyle-result.txt 2>&1
         continue-on-error: true
 
-      - name: Display Checkstyle Errors
-        run: |
-          echo "### Checkstyle Errors:"
-          grep -o -E "error" checkstyle-result.txt || echo "No errors found."
-
-      - name: Count Checkstyle Errors
+      - name: Parse Checkstyle output for warnings and errors
         id: parse_checkstyle
         run: |
-          errors=$(grep -o -E "error" checkstyle-result.txt | wc -l)
-          warnings=$(grep -o -E "warning|WARN" checkstyle-result.txt | wc -l)
+          errors=$(grep -c '^\[ERROR\]' checkstyle-result.txt)
+          warnings=$(grep -c '^\[WARN\]' checkstyle-result.txt)
           echo "Warnings: $warnings"
           echo "Errors: $errors"
           echo "errors=$errors" >> $GITHUB_ENV
+
+      - name: Display Checkstyle Errors
+        if: env.errors != '0'
+        run: |
+          echo "### Checkstyle Errors:"
+          grep '^\[ERROR\]' checkstyle-result.txt || echo "No errors found."
 
       - name: Fail if any errors
         run: |
@@ -54,4 +55,3 @@ jobs:
             echo "Errors found. Failing the job."
             exit 1
           fi
-
