refactor: Minor refactors across for build workflows and minor docos update for API.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Build with Maven
         id: build
-        run: mvn clean install
+        run: mvn clean install -DskipTests
