--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,19 @@
 
     <groupId>team-pixl.com</groupId>
     <artifactId>PIXL-POS</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>PIXL-POS</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.10.0</junit.version>
-        <java.version>21</java.version> <!-- Set the Java version property -->
+        <junit.version>5.8.2</junit.version>
+        <!-- Set the Java version property -->
+        <java.version>21</java.version>
+        <!-- Set the JavaFX version property -->
+        <javafx.version>22</javafx.version>
+        <!-- Maven Source and Target Compiler Versions -->
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -20,19 +26,27 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>22</version> <!-- Specify the version of JavaFX -->
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>22</version>
+            <version>${javafx.version}</version>
         </dependency>
 
         <!-- JUnit dependencies -->
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.2</version>
+            <version>${junit.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -40,7 +54,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.2</version>
+            <version>${junit.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -72,12 +86,6 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.6.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -102,8 +110,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+                <!-- Use the Java version property here -->
                 <configuration>
-                    <release>${java.version}</release> <!-- Use the Java version property here -->
+                    <release>${java.version}</release>
+                    <release>${javafx.version}</release>
                 </configuration>
             </plugin>
 
