--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,15 @@
     <name>PIXL-POS</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.2</junit.version>
         <!-- Set the Java version property -->
         <java.version>21</java.version>
         <!-- Set the JavaFX version property -->
-        <javafx.version>22</javafx.version>
+        <javafx.version>21</javafx.version>
         <!-- Maven Source and Target Compiler Versions -->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -110,10 +110,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <!-- Use the Java version property here -->
                 <configuration>
                     <release>${java.version}</release>
-                    <release>${javafx.version}</release>
                 </configuration>
             </plugin>
 
@@ -125,18 +123,16 @@
                 <executions>
                     <execution>
                         <id>default-cli</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
-                            <mainClass>teampixl.com.pixlpos/teampixl.com.pixlpos.application.POSApplicationLauncher</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <mainClass>teampixl.com.pixlpos.application.POSApplicationLauncher</mainClass>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
 
             <!-- Maven Surefire Plugin for running tests -->
             <plugin>
@@ -206,6 +202,69 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>teampixl.com.pixlpos.application.POSApplication</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>teampixl.com.pixlpos.application.POSApplication</mainClass>
+                                </transformer>
+                            </transformers>
+                            <relocations>
+                                <!-- Relocate JavaFX to prevent any possible conflicts during runtime -->
+                                <relocation>
+                                    <pattern>javafx</pattern>
+                                    <shadedPattern>shaded.javafx</shadedPattern>
+                                </relocation>
+                            </relocations>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
         </plugins>
     </build>
 
