--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,27 +94,30 @@ jobs:
           $env:MODULE_PATH="${env:JAVA_HOME}\jmods;${env:JAVA_FX_HOME}\lib"
           jlink --module-path $env:MODULE_PATH --add-modules java.base,javafx.controls,javafx.fxml --output ./runtime
 
+      - name: Verify where the executable is created
+        run: |
+          echo "Checking for generated executable in packages folder"
+          Get-ChildItem -Path ./packages
+
       - name: Package Application as exe with jpackage
         run: |
           jpackage --input target/ --name PIXL-POS --main-jar PIXL-POS-1.0.jar --main-class teampixl.com.pixlpos.application.POSApplication --type exe --dest ./packages --runtime-image ./runtime
 
+      - name: Verify executable creation
+        run: |
+          echo "Checking for generated executable after jpackage"
+          Get-ChildItem -Path ./packages
+
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+        run: |
+          gh release create ${{ github.ref_name }} ./packages/PIXL-POS.exe --title "Release ${{ github.ref_name }}" --notes "Automated release of PIXL-POS.exe"
 
       - name: Upload Windows Executable to Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./packages/PIXL-POS.exe
           asset_name: PIXL-POS.exe
           asset_content_type: application/octet-stream
