--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,8 @@ jobs:
           Get-ChildItem -Path ./packages
 
       - name: Create Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create ${{ github.ref_name }} ./packages/PIXL-POS.exe --title "Release ${{ github.ref_name }}" --notes "Automated release of PIXL-POS.exe"
 
