--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,11 +107,18 @@ jobs:
           echo "Checking for generated executable after jpackage"
           Get-ChildItem -Path ./packages
 
-      - name: Create Release
+      - name: Create Dynamic Tag
+        id: create_tag
+        run: |
+          BRANCH_NAME=${GITHUB_REF##*/}
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          echo "TAG_NAME=release-${BRANCH_NAME}-${COMMIT_HASH}" >> $GITHUB_ENV
+
+      - name: Create Release with Dynamic Tag
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create ${{ github.ref_name }} ./packages/PIXL-POS-1.0.exe --title "Release ${{ github.ref_name }}" --notes "Automated release of PIXL-POS.exe"
+          gh release create ${{ env.TAG_NAME }} ./packages/PIXL-POS-1.0.exe --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS.exe"
 
       - name: Upload Windows Executable to Release
         uses: actions/upload-release-asset@v1
@@ -119,6 +126,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./packages/PIXL-POS.exe
-          asset_name: PIXL-POS.exe
+          asset_path: ./packages/PIXL-POS-1.0.exe
+          asset_name: PIXL-POS-1.0.exe
           asset_content_type: application/octet-stream
