--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,17 +116,18 @@ jobs:
           echo "TAG_NAME=release-$BRANCH_NAME-$COMMIT_HASH" >> $env:GITHUB_ENV
 
       - name: Create Release with Dynamic Tag
+        id: create_release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create ${{ env.TAG_NAME }} ./packages/PIXL-POS-1.0.exe --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS.exe"
+          gh release create ${{ env.TAG_NAME }} ./packages/PIXL-POS-1.0.exe --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS.exe" --json upload_url > release.json
 
       - name: Upload Windows Executable to Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./packages/PIXL-POS-1.0.exe
           asset_name: PIXL-POS-1.0.exe
           asset_content_type: application/octet-stream
